Ask for audio hardware buffer size instead of using hardwired constants. https://bugs.webkit.org/show_bug.cgi?id=67952

Patch by Raymond Toy <rtoy@google.com> on 2011-09-19
Reviewed by Kenneth Russell.

* public/WebKitPlatformSupport.h:
(WebKit::WebKitPlatformSupport::audioHardwareBufferSize): Declare
new member function audioHardwareBufferSize.
* src/AudioDestinationChromium.cpp:
(WebCore::AudioDestinationChromium::AudioDestinationChromium):
Call audioHardwareBufferSize() to get buffer size; update
m_callbackBuffersize and m_renderCountPerCallback appropriately.
Remove global variables callbackBufferSize and
renderCountPerCallback.  Add constant for maximum
allowed buffer size and verify we don't exceed it.
(WebCore::AudioDestinationChromium::render): Use new member
variables instead of globals.
* src/AudioDestinationChromium.h:
Define new member variables m_callbackBufferSize and
m_renderCountPerCallback

git-svn-id: svn://svn.chromium.org/blink/trunk@95508 bbb929c8-8fbe-4397-9dbb-9b2b20218538