third_party/WebKit/Source/WebKit/chromium/src/AudioDestinationChromium.h
@@ -61,6 +61,8 @@ private:
     double m_sampleRate;
     bool m_isPlaying;
     OwnPtr<WebKit::WebAudioDevice> m_audioDevice;
+    size_t m_callbackBufferSize;
+    unsigned m_renderCountPerCallback;
 };
 
 } // namespace WebCore
